<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/signup_text_box"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="30sp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        style="@style/signup_text_box"
        android:layout_width="450dp"
        android:layout_height="901dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login123"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/textView"
            android:layout_width="259dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:autoLink="phone"
            android:font="@font/quicksand"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/let_s_start"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="430dp"
            android:layout_height="561dp"

            android:background="@drawable/layoutreadius"
            android:clickable="true"
            android:clipToPadding="true"
            android:elevation="25dp"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintCircleRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.952">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand"
                    android:text="@string/sign_up"
                    android:textSize="50sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

                <EditText
                    android:id="@+id/email"
                    style="@style/signup_text_box"
                    android:autofillHints=""
                    android:fontFamily="@font/quicksand"
                    android:hint="@string/your_name"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/password"
                    style="@style/signup_text_box"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/quicksand"
                    android:hint="@string/your_email"
                    android:inputType="textPersonName"
                    android:textColorHint="#B6B5B5"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/editTextTextPersonName6"
                    style="@style/signup_text_box"
                    android:autofillHints=""
                    android:ems="10"
                    android:fontFamily="@font/quicksand"
                    android:hint="@string/mobile_number"
                    android:inputType="textPersonName"
                    android:textColorHint="#B6B5B5"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="signUp"
                    android:text="Button" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>